Improve README and project documentation
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>